--- a/client/src/styles/sign-in.css
+++ b/client/src/styles/sign-in.css
@@ -1,7 +1,7 @@
 .logo {
   position: sticky;
   display: block;
-  
+
   padding: 7px 14px;
   width: 20% !important;
 }
@@ -14,4 +14,12 @@ h1 {
   left: 50%;
   margin: 10px;
 
+}
+
+.navbar{
+  visibility: hidden;
+}
+
+.form-control{
+  border-color: red;
 }
