--- a/client/src/styles/sign-in.css
+++ b/client/src/styles/sign-in.css
@@ -12,10 +12,6 @@ h1 {
   margin-bottom: 20px;
 }
 
-.navbar{
-  visibility: hidden;
-}
-
 .form-control{
   border-radius: 20px;
   background-color: #373738;
@@ -24,6 +20,11 @@ h1 {
   width: 30%;
   height: 60px;
   font-size: 1.5rem;
+}
+
+.errorText{
+  font-size: 1rem;
+  font-family: 'Cocomat-Regular';
 }
 
 input[type="text"]:focus {
@@ -45,6 +46,20 @@ input[type="password"]:focus {
   width: 29.7%;
   background-color: transparent;
   height: 60px;
+  color: #ffffff;
+  font-size: 1.9rem;
+  margin-bottom: 50px;
+}
+
+.btn:hover{
+  font-family: 'Cocomat-Regular';
+  border-radius: 20px;
+  border-color: #ffffff;
+  border-width: 4px;
+  width: 29.7%;
+  background-color: white;
+  height: 60px;
+  color: #ff755e;
   font-size: 1.9rem;
   margin-bottom: 50px;
 }
