--- a/client/src/styles/sign-in.css
+++ b/client/src/styles/sign-in.css
@@ -3,7 +3,12 @@
   display: block;
 
   padding: 7px 14px;
-  width: 18% !important;
+  width: 150px !important;
+}
+
+.logoContainer {
+  margin-top: 200px;
+  margin-left: 50%;
 }
 
 h1 {
@@ -18,7 +23,7 @@ h1 {
   background-color: #373738;
   border-color: #373738;
   color: #ffffff;
-  width: 30%;
+  width: 200px;
   height: 60px;
   font-size: 1.5rem;
 }
@@ -44,7 +49,7 @@ input[type="password"]:focus {
   border-radius: 20px;
   border-color: #ffffff;
   border-width: 4px;
-  width: 29.7%;
+  width: 200px;
   background-color: transparent;
   height: 60px;
   color: #ffffff;
@@ -57,7 +62,7 @@ input[type="password"]:focus {
   border-radius: 20px;
   border-color: #ffffff;
   border-width: 4px;
-  width: 29.7%;
+  width: 200px;
   background-color: white;
   height: 60px;
   color: #ff755e;
@@ -71,5 +76,6 @@ input[type="password"]:focus {
 }
 
 .googleSignIn{
-  width: 3%;
+  width: 18px;
+  margin-right: 8px;
 }
