--- a/client/src/styles/feed.css
+++ b/client/src/styles/feed.css
@@ -6,7 +6,6 @@
   margin: 20px;
   padding: 15px;
 }
-
 .description{
   font-size: 12px;
 }
@@ -47,6 +46,7 @@
   padding-left: 0px;
   padding-top: 0px;
   padding-right: 0px;
+  font-size: 16px!important;
 }
 
 
