Sidebar now transitions onto the page and navigation functions. Need to replace the temporary toggle button with a hamburger menu.

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,3 +1,9 @@
-.sidebar {
-    background-color: #ff755e
+.wrapper {
+    display: flex;
+    align-items: stretch;
+    min-height: 100vh;
+}
+
+.menu-toggle {
+    display:none;
 }
